--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,6 @@
 <div class="d-flex">
   <!-- sidebar -->
-  <div class="bg-dark border-right p-3" id="sidebar">
-    <h3 class="text-light">GifsApp</h3>
-    <hr class="text-white"/>
-    <div class="list-group list-reset">
-      <a href="#" class="list-group-item list-group-item-action">Dashboard</a>
-    </div>
-  </div>
+  <app-sidebar></app-sidebar>
   <!-- end sidebar -->
   <div class="container">
     <div class="row p-3">
