--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,5 @@
   <!-- sidebar -->
   <app-sidebar></app-sidebar>
   <!-- end sidebar -->
-  <div class="container">
-    <div class="row p-3">
-      <div class="col">
-        <h5>Buscar:</h5>
-        <input type="text" class="form-control" placeholder="Buscar gifs ...">
-      </div>
-    </div>
-    <hr/>
-  </div>
+  <app-gifs-page class="container"></app-gifs-page>
 </div>
