--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -2,6 +2,12 @@
   <h3 class="text-light">GifsApp</h3>
   <hr class="text-white" />
   <div class="list-group list-reset">
-    <a *ngFor="let item of history" href="#" class="list-group-item list-group-item-action">{{ item | titlecase}}</a>
+    <a
+      *ngFor="let item of history"
+      href="#"
+      class="list-group-item list-group-item-action"
+      (click)="search(item)"
+      >{{ item | titlecase }}</a
+    >
   </div>
 </div>
