--- a/src/app/gifs/results/results.component.html
+++ b/src/app/gifs/results/results.component.html
@@ -1,6 +1,6 @@
 
 <div class="row">
-    <div *ngFor="let gif of results" class="col-md-4 col-sm-6">
+    <div *ngFor="let gif of results" class="col-md-4 col-sm-6 animate__animated animate__fadeIn">
         <div class="card">
             <img  class="card-img-top" [src]="gif.images.downsized_medium.url" [alt]="gif.title">
             <div class="card-body">
